Changelog
=========

7.0-dev - (unreleased)
----------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" install EEA Cache
  [voineali refs #20678]
* Pre-upgrade-step: Also add eea.cache within buildout zcml directive before
  eea.cache-overrides
  [voineali refs #20678]
* Feature: Added a browser view called **memcache.invalidate** that allows
  users to manually invalidate object cached methods. It also support
  invalidation of relatedItems and back-references
  [voineali refs #20678]
* Change: Auto-invalidate all cache associated with current object's UID when
  ObjectModifiedEvent is triggered
  [voineali refs #20678]


6.3 - (2014-01-21)
------------------
* Bug fix: removed wrongly added blockquotes within README.rst
  [ichim-david refs #18064]
* Feature: adding Sphinx-generated documentation in Page Template format
  [batradav refs #9502]

6.2 - (2013-10-04)
------------------
* Change: updated zope imports with the versions that require minimum Plone 4.1
  for eea.cache
  [ichimdav refs #15651]

6.1 - (2013-06-17)
------------------
* Cleanup: Use logger.debug instead of logger.info for debug messages
  [avoinea]

6.0 - (2013-05-20)
------------------
* Feature: Removed lovely.memcached dependency
  [voineali refs #14343]

5.1 - (2013-02-04)
------------------
* Feature: added information for contributors
  [ciobabog refs #13892]
* Feature: added ability to pass a lifetime key to the cache decorator in
  order to cache it for a determined period different from the default lifetime
  [ichimdav #13677]
* Upgrade step: (optional)
  Within ZMI > portal_properties > site_properties add an **int** property
  called **memcached_defaultLifetime** and set it's value to
  **86400** (one day) or any value that fits your needs.
* Feature: Ability to set memcached default lifetime, which by now was hardcoded
  to one hour (3600 seconds)
  [voineali refs #13677]

5.0 - (2012-10-08)
------------------
* Change: Updated README and egg's metadata