@@ -1,10 +1,19 @@
 """ Browser
 """
+import logging
 from zope import event
-from zope.component import queryAdapter
+from zope.component import queryAdapter, queryMultiAdapter
 from plone.uuid.interfaces import IUUID
 from eea.cache.event import InvalidateCacheEvent
 from Products.Five.browser import BrowserView
+
+logger = logging.getLogger('eea.cache')
+
+VARNISH = True
+try:
+    from plone.app import caching
+except ImportError:
+    VARNISH = False
 
 class InvalidateMemCache(BrowserView):
     """ View to invalidate memcache
@@ -37,3 +46,48 @@ class InvalidateMemCache(BrowserView):
             return "Can't invalidate memcache. Missing uid adapter."
         event.notify(InvalidateCacheEvent(raw=True, dependencies=[uid]))
         return "Memcache invalidated"
+
+class InvalidateCache(BrowserView):
+    """ View to invalidate all cache varnish and memcache
+    """
+
+    def relatedItems(self, **kwargs):
+        """ Invalidate related Items
+        """
+        getRelatedItems = getattr(self.context, 'getRelatedItems', lambda: [])
+        for item in getRelatedItems():
+            invalidate_cache = queryMultiAdapter(
+                (item, self.request), name='cache.invalidate',
+                default=lambda:None)
+            invalidate_cache()
+        return 'Cache invalidated for relatedItems'
+
+    def backRefs(self, **kwargs):
+        """ Invalidate back references
+        """
+        getBRefs = getattr(self.context, 'getBRefs', lambda: [])
+        for item in getBRefs():
+            invalidate_cache = queryMultiAdapter(
+                (item, self.request), name='cache.invalidate',
+                default=lambda:None)
+            invalidate_cache()
+        return 'Cache invalidated for back references'
+
+    def __call__(self, **kwargs):
+
+        # Memcache
+        invalidate_memcache = queryMultiAdapter((self.context, self.request),
+                                                name='memcache.invalidate')
+        invalidate_memcache()
+
+        # Varnish
+        if not VARNISH:
+            return "Cache invalidated"
+
+        try:
+            if caching.purge.isPurged(self.context):
+                event.notify(caching.purge.Purge(self.context))
+        except Exception, err:
+            logger.exception(err)
+
+        return "Cache invalidated"
