@@ -47,32 +47,3 @@ def flush(obj, evt):
         return
 
     return invalidate()
-
-
-def flush_relatedItems(obj, evt):
-    """ Purge memcache for all related items
-    """
-    request = getattr(obj, 'REQUEST', None)
-    if not request:
-        return
-
-    invalidate = component.queryMultiAdapter((obj, request),
-                     name=u'memcache.invalidate')
-    if not invalidate:
-        return
-
-    return invalidate.relatedItems()
-
-def flush_backRefs(obj, evt):
-    """ Purge memcache for all back references
-    """
-    request = getattr(obj, 'REQUEST', None)
-    if not request:
-        return
-
-    invalidate = component.queryMultiAdapter((obj, request),
-                     name=u'memcache.invalidate')
-    if not invalidate:
-        return
-
-    return invalidate.backRefs()
