@@ -8,9 +8,13 @@ Changelog
 * Pre-upgrade-step: Also add eea.cache within buildout zcml directive before
   eea.cache-overrides
   [voineali refs #20678]
+* Feature: Added a browser view called **cache.invalidate** that allows
+  editors to manually invalidate cache (including varnish and memcache). It
+  also supports invalidation for related-items and back-references
+  [voineali refs #20678]
 * Feature: Added a browser view called **memcache.invalidate** that allows
-  users to manually invalidate object cached methods. It also support
-  invalidation of relatedItems and back-references
+  users to manually invalidate memcache. It also supports
+  invalidation of relatedItems and back-references memcache
   [voineali refs #20678]
 * Change: Auto-invalidate all cache associated with current object's UID when
   ObjectModifiedEvent is triggered
